--- a/index.html
+++ b/index.html
@@ -152,9 +152,16 @@
 				<div class="panel">
         	<h5>So many components, girl!</h5>
         	<p>A whole kitchen sink of goodies comes with Foundation. Checkout the docs to see them all, along with details on making them your own.</p>
+          <a href="#" class="small button" data-reveal-id="twitterModal" data-reveal>Samepage</a>
         	<a href="http://foundation.zurb.com/docs/" class="small button">Go to Foundation Docs</a>
         </div>
       </div>
+    </div>
+
+    <div id="twitterModal" class="reveal-modal" data-reveal>
+      <h2>Redirecting to Twitter...</h2>
+      click outside the window to close
+      <a class="close-reveal-modal">&#215;</a>
     </div>
 
     <script src="js/vendor/jquery.js"></script>
